# polymarket-arb

./: .gitignore  Dockerfile  PUBLISHING.md  README.md  RESEARCH.md  backtest-output.txt  backtest-report-2026-03-29.md  backtest-results-20260329.json  backtest-results-20260329.md  com.polymarket-arb.plist  docker-compose.yml  launcher.js  package-lock.json  package.json  pyproject.toml  vitest.config.ts  vitest.integration.config.ts
.github/workflows/: docker-publish.yml
polymarket_arb/: __init__.py  binance.py  config.py  dashboard.py  db.py  main.py  polymarket.py  risk.py  signal.py  telegram.py
research/: backtest-results-2026-03-29.md
src/: backtest.ts  backtestRunner.ts  calibrationLogger.ts  claude.ts  daemon.ts  feeds.ts  index.ts  kelly.ts  logger.ts  newsPoller.ts  polymarket.ts  report.ts  signal.ts  simulate.ts  simulationSignal.ts
src/__tests__/: backtest.test.ts  calibrationLogger.test.ts  claude.test.ts  kelly.test.ts  newsPoller.test.ts  polymarket.test.ts  signal.test.ts  simulate.test.ts  simulationSignal.test.ts  whale.test.ts
src/__tests__/integration/: api-discovery.test.ts
tests/: test_binance.py  test_db.py  test_risk.py  test_signal.py
