[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-arb"
version = "0.1.0"
description = "Polymarket latency arbitrage bot — paper trading daemon with BTC/ETH 5/15-min contract monitoring"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["polymarket", "arbitrage", "trading", "crypto", "defi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "websockets>=12.0",
    "rich>=13.0",
    "py-clob-client>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
polymarket-arb = "polymarket_arb.main:main"

[project.urls]
Homepage = "https://github.com/Gonzih/polymarket-arb"
Repository = "https://github.com/Gonzih/polymarket-arb"

[tool.setuptools.packages.find]
where = ["."]
include = ["polymarket_arb*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
